--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,8 +23,7 @@
 }
 
 .page {
-    padding-left: 15%;
-    padding-top: 15%;
+    padding: 60px 5%;
     position: relative;
 }
 
@@ -32,6 +31,28 @@
     color: white;
     font-family: 'Pricedown';
     font-size: 60px;
+    text-align: center;
+}
+
+.section {
+    text-align: center;
+    margin: 10px;
+}
+
+.label {
+    margin: 0px;
+    color: white;
+    font-family: 'London';
+}
+
+.button {
+    color: black;
+    font-family: 'London';
+    background-color: white;
+    padding: 5px 10px 5px 10px;
+    margin: 10px;
+    display: inline-block;
+    cursor: pointer;
 }
 
 /* Footer styles */
